{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 75,
  "lineage": "1749ac93-6a17-fd92-ca00-b63314cb3379",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_nat_rule_collection",
      "name": "fe-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Dnat",
            "azure_firewall_name": "prod-FW-01",
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Fe-rg/providers/Microsoft.Network/azureFirewalls/prod-FW-01/natRuleCollections/nat01",
            "name": "nat01",
            "priority": 100,
            "resource_group_name": "prod-Fe-rg",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "51.137.26.104"
                ],
                "destination_ports": [
                  "3389"
                ],
                "name": "jbox-rule",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": [],
                "translated_address": "10.0.1.4",
                "translated_port": "3389"
              },
              {
                "description": "",
                "destination_addresses": [
                  "51.137.26.104"
                ],
                "destination_ports": [
                  "80"
                ],
                "name": "web-rule",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": [],
                "translated_address": "10.0.2.4",
                "translated_port": "80"
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.fe-rg",
            "azurerm_public_ip.fe-rg",
            "azurerm_resource_group.be-rg",
            "azurerm_resource_group.fe-rg",
            "azurerm_resource_group.jbox-rg",
            "module.be-vnet.azurerm_subnet.subnet",
            "module.be-vnet.azurerm_virtual_network.vnet",
            "module.be-vnet.data.azurerm_resource_group.vnet",
            "module.fe-vnet.azurerm_subnet.subnet",
            "module.fe-vnet.azurerm_virtual_network.vnet",
            "module.fe-vnet.data.azurerm_resource_group.vnet",
            "module.jbox-vm.azurerm_network_interface.compute",
            "module.web-vm.azurerm_network_interface.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "be-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Be-rg/providers/Microsoft.Network/networkInterfaces/prod-Web-nic|/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Be-rg/providers/Microsoft.Network/networkSecurityGroups/prod-Web-nsg",
            "network_interface_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Be-rg/providers/Microsoft.Network/networkInterfaces/prod-Web-nic",
            "network_security_group_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Be-rg/providers/Microsoft.Network/networkSecurityGroups/prod-Web-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.be-rg",
            "module.be-vnet.azurerm_subnet.subnet",
            "module.be-vnet.azurerm_virtual_network.vnet",
            "module.be-vnet.data.azurerm_resource_group.vnet",
            "module.web-vm.azurerm_network_interface.compute",
            "module.web-vm.azurerm_network_security_group.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "jbox-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Jbox-rg/providers/Microsoft.Network/networkInterfaces/prod-Jbox-nic|/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Jbox-rg/providers/Microsoft.Network/networkSecurityGroups/prod-Jbox-nsg",
            "network_interface_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Jbox-rg/providers/Microsoft.Network/networkInterfaces/prod-Jbox-nic",
            "network_security_group_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Jbox-rg/providers/Microsoft.Network/networkSecurityGroups/prod-Jbox-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg",
            "azurerm_resource_group.jbox-rg",
            "module.fe-vnet.azurerm_subnet.subnet",
            "module.fe-vnet.azurerm_virtual_network.vnet",
            "module.fe-vnet.data.azurerm_resource_group.vnet",
            "module.jbox-vm.azurerm_network_interface.compute",
            "module.jbox-vm.azurerm_network_security_group.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "be-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.4/32",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Be-rg/providers/Microsoft.Network/networkSecurityGroups/prod-Web-nsg/securityRules/web",
            "name": "web",
            "network_security_group_name": "prod-Web-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "prod-Be-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.be-rg",
            "module.be-vnet.azurerm_subnet.subnet",
            "module.be-vnet.azurerm_virtual_network.vnet",
            "module.be-vnet.data.azurerm_resource_group.vnet",
            "module.web-vm.azurerm_network_interface.compute",
            "module.web-vm.azurerm_network_security_group.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "fe-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.4/32",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Be-rg/providers/Microsoft.Network/networkSecurityGroups/prod-Web-nsg/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "prod-Web-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "prod-Be-rg",
            "source_address_prefix": "10.0.1.4/32",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.be-rg",
            "azurerm_resource_group.fe-rg",
            "azurerm_resource_group.jbox-rg",
            "module.be-vnet.azurerm_subnet.subnet",
            "module.be-vnet.azurerm_virtual_network.vnet",
            "module.be-vnet.data.azurerm_resource_group.vnet",
            "module.fe-vnet.azurerm_subnet.subnet",
            "module.fe-vnet.azurerm_virtual_network.vnet",
            "module.fe-vnet.data.azurerm_resource_group.vnet",
            "module.jbox-vm.azurerm_network_interface.compute",
            "module.web-vm.azurerm_network_interface.compute",
            "module.web-vm.azurerm_network_security_group.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jbox-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.1.4/32",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Jbox-rg/providers/Microsoft.Network/networkSecurityGroups/prod-Jbox-nsg/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "prod-Jbox-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "prod-Jbox-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.fe-rg",
            "azurerm_resource_group.jbox-rg",
            "module.fe-vnet.azurerm_subnet.subnet",
            "module.fe-vnet.azurerm_virtual_network.vnet",
            "module.fe-vnet.data.azurerm_resource_group.vnet",
            "module.jbox-vm.azurerm_network_interface.compute",
            "module.jbox-vm.azurerm_network_security_group.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fe-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Fe-rg/providers/Microsoft.Network/publicIPAddresses/prod-Pub-ip01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.137.26.104",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "prod-Pub-ip01",
            "resource_group_name": "prod-Fe-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "be-fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Be-rg/providers/Microsoft.Network/virtualNetworks/prod-Web-vnet/virtualNetworkPeerings/be-fe",
            "name": "be-fe",
            "remote_virtual_network_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Fe-rg/providers/Microsoft.Network/virtualNetworks/prod-Fe-vnet",
            "resource_group_name": "prod-Be-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "prod-Web-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.be-rg",
            "azurerm_resource_group.fe-rg",
            "module.be-vnet.azurerm_virtual_network.vnet",
            "module.be-vnet.data.azurerm_resource_group.vnet",
            "module.fe-vnet.azurerm_virtual_network.vnet",
            "module.fe-vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "fe-be",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Fe-rg/providers/Microsoft.Network/virtualNetworks/prod-Fe-vnet/virtualNetworkPeerings/fe-be",
            "name": "fe-be",
            "remote_virtual_network_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Be-rg/providers/Microsoft.Network/virtualNetworks/prod-Web-vnet",
            "resource_group_name": "prod-Fe-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "prod-Fe-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.be-rg",
            "azurerm_resource_group.fe-rg",
            "module.be-vnet.azurerm_virtual_network.vnet",
            "module.be-vnet.data.azurerm_resource_group.vnet",
            "module.fe-vnet.azurerm_virtual_network.vnet",
            "module.fe-vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.be-vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Be-rg/providers/Microsoft.Network/virtualNetworks/prod-Web-vnet/subnets/prod-Web-subnet",
            "name": "prod-Web-subnet",
            "resource_group_name": "prod-Be-rg",
            "virtual_network_name": "prod-Web-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.be-rg",
            "module.be-vnet.azurerm_virtual_network.vnet",
            "module.be-vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.be-vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.2.0/23"
            ],
            "guid": "fda8b4a1-80dc-4d62-8a73-6e5ae93809f3",
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Be-rg/providers/Microsoft.Network/virtualNetworks/prod-Web-vnet",
            "location": "westeurope",
            "name": "prod-Web-vnet",
            "resource_group_name": "prod-Be-rg",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.be-rg",
            "module.be-vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.fe-vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Fe-rg/providers/Microsoft.Network/virtualNetworks/prod-Fe-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "prod-Fe-rg",
            "virtual_network_name": "prod-Fe-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg",
            "module.fe-vnet.azurerm_virtual_network.vnet",
            "module.fe-vnet.data.azurerm_resource_group.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Fe-rg/providers/Microsoft.Network/virtualNetworks/prod-Fe-vnet/subnets/prod-Jbox-subnet",
            "name": "prod-Jbox-subnet",
            "resource_group_name": "prod-Fe-rg",
            "virtual_network_name": "prod-Fe-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg",
            "module.fe-vnet.azurerm_virtual_network.vnet",
            "module.fe-vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.fe-vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/23"
            ],
            "guid": "60c0bca1-33cb-4cb9-8340-87413c3b004d",
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Fe-rg/providers/Microsoft.Network/virtualNetworks/prod-Fe-vnet",
            "location": "westeurope",
            "name": "prod-Fe-vnet",
            "resource_group_name": "prod-Fe-rg",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg",
            "module.fe-vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.jbox-vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Jbox-rg/providers/Microsoft.Network/networkInterfaces/prod-Jbox-nic",
            "internal_domain_name_suffix": "ug4mayglgo2uza0aq3atyoyajf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Fe-rg/providers/Microsoft.Network/virtualNetworks/prod-Fe-vnet/subnets/prod-Jbox-subnet"
              }
            ],
            "location": "westeurope",
            "name": "prod-Jbox-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "prod-Jbox-rg"
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg",
            "azurerm_resource_group.jbox-rg",
            "module.fe-vnet.azurerm_subnet.subnet",
            "module.fe-vnet.azurerm_virtual_network.vnet",
            "module.fe-vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.jbox-vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Jbox-rg/providers/Microsoft.Network/networkSecurityGroups/prod-Jbox-nsg",
            "location": "westeurope",
            "name": "prod-Jbox-nsg",
            "resource_group_name": "prod-Jbox-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.jbox-rg"
          ]
        }
      ]
    },
    {
      "module": "module.web-vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Be-rg/providers/Microsoft.Network/networkInterfaces/prod-Web-nic",
            "internal_domain_name_suffix": "ug0kr5o2qbre1cttnznosoaj4d.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Be-rg/providers/Microsoft.Network/virtualNetworks/prod-Web-vnet/subnets/prod-Web-subnet"
              }
            ],
            "location": "westeurope",
            "name": "prod-Web-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "prod-Be-rg"
          },
          "dependencies": [
            "azurerm_resource_group.be-rg",
            "module.be-vnet.azurerm_subnet.subnet",
            "module.be-vnet.azurerm_virtual_network.vnet",
            "module.be-vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.web-vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/317af27c-bb9b-43c5-ad52-ae1d11ed72c0/resourceGroups/prod-Be-rg/providers/Microsoft.Network/networkSecurityGroups/prod-Web-nsg",
            "location": "westeurope",
            "name": "prod-Web-nsg",
            "resource_group_name": "prod-Be-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.be-rg"
          ]
        }
      ]
    }
  ]
}